# langgraph-recipe-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/: common_alfamart_ingredients.yaml
src/recipe_agent/: __init__.py  config.py  graph.py  main.py  state.py
src/recipe_agent/nodes/: __init__.py  collect_ideas.py  critique_recipe.py  critique_recommendations.py  decide_task.py  fetch_youtube_videos.py  generate_recipe.py  generate_recommendations.py  parse_input.py  plan_search.py  render_output.py  revise_recipe.py  select_best_recommendation.py  select_recipe.py
src/recipe_agent/prompts/: critique_recipe.md  critique_recommendations.md  decide_task.md  generate_recipe.md  generate_recommendations.md  parse_input.md  revise_recipe.md  select_best_recommendation.md
src/recipe_agent/tools/: __init__.py  ingredient_store.py  language.py  llm.py  markdown_writer.py  youtube_search.py
tests/: test_critique.py  test_decide_task.py  test_graph.py  test_markdown_writer.py  test_recommendations.py  test_youtube_optional.py
